# PyTorch-implementation-of-Screening-Attention

./: BENCHMARK_REPORT.md  BENCHMARK_REPORT_TRITON.md  CLAUDE.md  README.md  pyproject.toml  requirements.txt  train.py
benchmarks/: bench_efficiency.py  bench_r_evolution.py  bench_sparsity.py  bench_triton.py  bench_wikitext2.py  bench_wikitext2_v2.py  results_efficiency.json  results_sparsity.json  results_triton.json  results_wikitext2.json  results_wikitext2_v2.json
examples/: train_tiny_lm.py
multiscreen/: __init__.py  attention.py  attention_triton.py  layers.py  model.py  norm.py
multiscreen/kernels/: __init__.py  screening_bwd.py  screening_fwd.py
tests/: test_attention.py
